# baja_testbench

./: .gitignore  README.md  STRUCTURE.md  pyproject.toml  run.py
app/api/: deps.py
app/api/v1/: router.py
app/core/: config.py
app/models/: __init__.py
app/services/: system_metrics.py
baja-testbench/: __init__.py  main.py
baja-testbench/api/v1/: health.py
baja-testbench/core/: __init__.py
baja_testbench/: main.py
baja_testbench/api/: deps.py
baja_testbench/api/v1/: health.py  router.py
baja_testbench/models/: __init__.py  health.py
baja_testbench/services/: system_metrics.py
modules/: __init__.py
modules/health_check/: __init__.py  models.py  service.py
static/: index.html
static/css/: styles.css
static/js/: app.js  health.js  router.js
