[project]
name = "baja-testbench"
version = "1.0.0"
description = "Hardware-in-the-Loop test server for drivetrain subsystem validation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.121.3",
    "uvicorn[standard]>=0.38.0",
    "psutil>=7.1.3",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
# Optional: specify custom sources for packages if needed

